arc1/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

error: expected expression, found `let` statement
  --> /home/runner/work/rustlings-zaychyk/rustlings-zaychyk/format_check/src/lib.rs:33:5
   |
33 |     let mut joinhandles = Vec::new();
   |     ^^^
   |
   = note: only supported directly in conditions of `if` and `while` expressions


// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-zaychyk/rustlings-zaychyk/format_check)
error: expected expression, found `let` statement
  --> src/lib.rs:33:5
   |
33 |     let mut joinhandles = Vec::new();
   |     ^^^
   |
   = note: only supported directly in conditions of `if` and `while` expressions

error[E0425]: cannot find value `child_numbers` in this scope
  --> src/lib.rs:38:28
   |
38 |             let sum: u32 = child_numbers.iter().filter(|&&n| n % 8 == offset).sum();
   |                            ^^^^^^^^^^^^^ help: a local variable with a similar name exists: `shared_numbers`

error: unused import: `std::sync::Arc`
  --> src/lib.rs:27:5
   |
27 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> src/lib.rs:26:11
   |
26 | #![forbid(unused_imports)] // Do not change this, (or the next) line.
   |           ^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0425`.
error: could not compile `format_check` (lib) due to 3 previous errors

[!] Source code format check: FAILED
